# sopel-torznab

./: README.md  setup.cfg  setup.py
sopel_torznab/: __init__.py
