[metadata]
name = sopel-torznab
version = 0.1.0
description = Search a torznab-compatible torrent indexer from IRC with Sopel.
author = S73ph4n
author_email = you@domain.tld
url = https://github.com/S73ph4n/sopel-torznab
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.0,<8

[options.entry_points]
sopel.plugins =
    torznab = sopel_torznab
